Fixed howto sidebar too big for screen by makeing it not sticky and adding a scroll-to-top button

--- a/css/base.css
+++ b/css/base.css
@@ -1024,7 +1024,6 @@ form.signup-form a:hover {
 
 
 .sidebar-wrapper {
-    position: sticky;
     height: auto;
     width: fit-content;
     border-radius: var(--button-border-radius);
@@ -1041,7 +1040,6 @@ form.signup-form a:hover {
     align-items: flex-start;
     border-radius: calc(var(--button-border-radius) + 5px);
     background: var(--page-background-color);
-    position: sticky;
     width: 100%;
     padding: 5px;
 
@@ -1055,6 +1053,10 @@ main.general.howto-page {
     flex-wrap: wrap;
     gap: 1.5rem;
     align-items: flex-start;
+
+    a {
+        font-weight: bold;
+    }
 }
 
 main.general.howto-page .main-content-box {
@@ -1091,7 +1093,7 @@ main.general.howto-page section  {
     border: 1px solid #d1d5db;
     border-radius: 1rem;
     padding: 1.5rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.07);
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
     scroll-margin-top: 110px;
     font-size: 1rem;
 }
@@ -1494,6 +1496,37 @@ a.event-link:hover {
 .full-capacity::after {
     color: var(--error-color);
     content: ' Full! ';
+}
+
+.scroll-to-top-btn {
+    position: fixed;
+    bottom: 40px;
+    z-index: 1000;
+    background-color: var(--page-background-color);
+    color: var(--accent-color);
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    font-weight: bold;
+    cursor: pointer;
+    display: none;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    align-items: center;
+    justify-content: center;
+    line-height: 1;
+    text-align: center;
+}
+
+.scroll-to-top-btn:hover {
+    background-color: var(--page-font-color);
+}
+
+@media only screen and (min-width: 1024px) {
+    .scroll-to-top-btn {
+        left: 9rem; /* 8rem margin + 1rem padding */
+    }
 }
 
 .application-view-container {
